--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "node": "^13.12.0"
+  }
 }
