--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "url": "https://github.com/northcoders/be-nc-news/issues"
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
-  "dependencies": {},
+  "dependencies": {
+    "knex": "^0.20.14",
+    "pg": "^8.0.2"
+  },
   "devDependencies": {
-    "node": "^13.12.0"
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1",
+    "node": "^13.12.0",
+    "supertest": "^4.0.2"
   }
 }
