--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test-utils": "mocha spec/utils.spec.js",
     "test": "mocha spec/app.spec.js",
     "seed": "knex seed:run",
-    "migrate-make": "knex migrate:make"
+    "migrate-make": "knex migrate:make",
+    "migrate-latest": "knex migrate:latest",
+    "migrate-rollback": "knex migrate:rollback"
   },
   "repository": {
     "type": "git",
