--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "test-utils": "mocha spec/utils.spec.js",
-    "test": "mocha spec/app.spec.js",
+    "test": "mocha spec",
     "seed": "knex seed:run",
     "migrate-make": "knex migrate:make",
     "migrate-latest": "knex migrate:latest",
