--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "test-utils": "mocha spec/utils.spec.js",
-    "test": "mocha spec",
+    "test": "mocha spec/app.spec.js",
     "seed": "knex seed:run",
-    "migrate-make": "knex migrate:make",
-    "migrate-latest": "knex migrate:latest",
-    "migrate-rollback": "knex migrate:rollback"
+    "seed-test": "npm run setup-dbs && npm run migrate-latest && NODE_ENV=test knex seed:run",
+    "migrate-make": "NODE_ENV=test knex migrate:make",
+    "migrate-latest": "NODE_ENV=test knex migrate:latest",
+    "migrate-rollback": "NODE_ENV=test knex migrate:rollback"
   },
   "repository": {
     "type": "git",
