--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "seed-test": "npm run setup-dbs && npm run migrate-latest && NODE_ENV=test knex seed:run",
     "migrate-make": "NODE_ENV=test knex migrate:make",
     "migrate-latest": "NODE_ENV=test knex migrate:latest",
-    "migrate-rollback": "NODE_ENV=test knex migrate:rollback"
+    "migrate-rollback": "NODE_ENV=test knex migrate:rollback",
+    "seed:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex seed:run",
+    "migrate-latest:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:latest",
+    "migrate-rollback:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:rollback",
+    "start": "node listen.js"
   },
   "repository": {
     "type": "git",
