--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "be-nc-news",
   "version": "1.0.0",
-  "description": "bc-nc-news",
+  "description": "A Rest API using ExpressJS and PostgresSQL",
   "main": "index.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
